Updated admin pages
Added more features to the admin page and optimized the file resources