@@ -5,12 +5,9 @@ import fi.iki.elonen.NanoHTTPD;
 
 import java.io.IOException;
 import java.sql.*;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.*;
 
 public class AdminFunctions extends NanoHTTPD {
 
@@ -32,7 +29,7 @@ public class AdminFunctions extends NanoHTTPD {
 
     private Response addCorsHeaders(Response response) {
         response.addHeader("Access-Control-Allow-Origin", "*");
-        response.addHeader("Access-Control-Allow-Methods", "GET, DELETE, OPTIONS");
+        response.addHeader("Access-Control-Allow-Methods", "GET, DELETE, OPTIONS, POST");
         response.addHeader("Access-Control-Allow-Headers", "Content-Type, Authorization");
         return response;
     }
@@ -54,13 +51,31 @@ public class AdminFunctions extends NanoHTTPD {
                 if (Method.GET.equals(method)) {
                     return addCorsHeaders(newFixedLengthResponse(Response.Status.OK, "application/json", getAttendees()));
                 } else if (Method.DELETE.equals(method) && session.getParameters().containsKey("id")) {
-                    int id = Integer.parseInt(session.getParameters().get("id").get(0));
+                    int id = Integer.parseInt(session.getParameters().get("id").getFirst());
                     deleteAttendee(id);
                     return addCorsHeaders(newFixedLengthResponse(Response.Status.OK, "application/json", "{\"status\":\"deleted\"}"));
+                } else if (Method.POST.equals(method)) {
+                    Map<String, String> params = new HashMap<>();
+                    session.parseBody(params);
+                    Map<String, String> requestBody = gson.fromJson(params.get("postData"), Map.class);
+
+                    //String id = requestBody.get("id");
+                    String firstName = requestBody.get("first_name");
+                    String lastName = requestBody.get("last_name");
+                    String email = requestBody.get("email");
+                    String phone = requestBody.get("phone");
+                    String position = requestBody.get("position");
+
+                    addAttendee(firstName, lastName, email, phone, position);
+
+                    // Trigger email after successful addition
+                    SendEmail.createEmail(email, firstName, lastName);
+
+                    return addCorsHeaders(newFixedLengthResponse(Response.Status.OK, "application/json", "{\"status\":\"added\"}"));
                 }
             }
         } catch (Exception e) {
-            logger.log(Level.SEVERE, "GetMethod method error: ", e);
+            logger.log(Level.SEVERE, "Error handling request: ", e);
             return addCorsHeaders(newFixedLengthResponse(Response.Status.INTERNAL_ERROR, "application/json", "{\"error\":\"Server error\"}"));
         }
 
@@ -79,6 +94,9 @@ public class AdminFunctions extends NanoHTTPD {
                 attendee.put("first_name", result.getString("first_name"));
                 attendee.put("last_name", result.getString("last_name"));
                 attendee.put("email", result.getString("email"));
+                attendee.put("phone", result.getString("phone"));
+                attendee.put("position", result.getString("position"));
+                attendee.put("registered_on", result.getString("registered_on"));
                 attendees.add(attendee);
             }
         }
@@ -89,6 +107,18 @@ public class AdminFunctions extends NanoHTTPD {
         try (Connection conn = DriverManager.getConnection(JDBC_URL, DB_USER, DB_PASSWORD);
              PreparedStatement statement = conn.prepareStatement("DELETE FROM attendees WHERE id = ?")) {
             statement.setInt(1, id);
+            statement.executeUpdate();
+        }
+    }
+
+    private void addAttendee(String firstName, String lastName, String email, String phone, String position) throws SQLException {
+        try (Connection conn = DriverManager.getConnection(JDBC_URL, DB_USER, DB_PASSWORD);
+             PreparedStatement statement = conn.prepareStatement("INSERT INTO attendees (first_name, last_name, email, phone, position) VALUES (?, ?, ?, ?, ?)")) {
+            statement.setString(1, firstName);
+            statement.setString(2, lastName);
+            statement.setString(3, email);
+            statement.setString(4, phone);
+            statement.setString(5, position);
             statement.executeUpdate();
         }
     }
